--- a/MediaLibrary.Web/src/app/tag-list/tag-list.component.scss
+++ b/MediaLibrary.Web/src/app/tag-list/tag-list.component.scss
@@ -1,3 +1,8 @@
+:host {
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .tag.editable {
     cursor: pointer;
 
